// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header parentPage === feed 1`] = `
<Base
  className="d-flex align-items-center"
>
  <Connect(CommunitySelector)
    Button={[Function]}
    isArrowed={true}
    showOnlyFollowed={true}
    toggle={[MockFunction]}
  />
</Base>
`;

exports[`Header snapshot test 1`] = `
<Base
  className="d-flex align-items-center"
>
  <Connect(CommunitySelector)
    Button={[Function]}
    isArrowed={true}
    showOnlyFollowed={false}
    toggle={[MockFunction]}
  />
</Base>
`;
